--- a/html/results_base.html
+++ b/html/results_base.html
@@ -36,13 +36,18 @@ var jsonResponse = $.ajax({
 					title: {
 						display: true,
 						text: 'Rangliste'
+					},
+					scales: {
+                        yAxes: [{
+                            ticks: {
+                                beginAtZero: true
+                                }
+                        }]
 					}
 				}
 			});
-
-
-})
-
+			
+});
 
 </script>
 </body>
