--- a/html/results_base.html
+++ b/html/results_base.html
@@ -11,10 +11,10 @@
 
 <canvas id="points" name="Rangliste" width="740" height="200"></canvas>
 <canvas id="opinions0" name="Findet Ihr, dass Bayern vermehrt in den Ausbau von Ganztagsschulen investieren sollte?" width="740" height="200"></canvas>
-<canvas id="opinions1" name="Findet Ihr, dass beeinträchtigte Schüler, anstatt in speziell ausgelegten Förderschulen, besser in herkömmlichen Schulen unterrichtet werden sollen?" width="740" height="200"></canvas>
-<canvas id="opinions2" name="Haltet Ihr Zuwandererklassen für die bessere Unterrichtsform von ausländischen Schülern als Integrationsklassen?" width="740" height="200"></canvas>
-<canvas id="opinions3" name="Findet Ihr, dass in bayrischen Klassenzimmern ein Kreuz hängen sollte?" width="740" height="200"></canvas>
-<canvas id="opinions4" name="Findet Ihr, es sollte eine Vorschrift geben, die den Schülern vorschreibt, was sie essen sollen, anstatt jeden Schüler für sich selbst entscheiden zu lassen?" width="740" height="200"></canvas>
+<canvas id="opinions1" name="Findet Ihr, dass beeintr&auml;chtigte Sch&uuml;ler, anstatt in speziell ausgelegten F&ouml;rderschulen, besser in herk&ouml;mmlichen Schulen unterrichtet werden sollen?" width="740" height="200"></canvas>
+<canvas id="opinions2" name="Haltet Ihr Zuwandererklassen f&uuml;r die bessere Unterrichtsform von ausl&auml;ndischen Sch&uuml;lern als Integrationsklassen?" width="740" height="200"></canvas>
+<canvas id="opinions3" name="Findet Ihr, dass in bayrischen Klassenzimmern ein Kreuz h&auml;ngen sollte?" width="740" height="200"></canvas>
+<canvas id="opinions4" name="Findet Ihr, es sollte eine Vorschrift geben, die den Sch&uuml;lern vorschreibt, was sie essen sollen, anstatt jeden Sch&uuml;ler f&uuml;r sich selbst entscheiden zu lassen?" width="740" height="200"></canvas>
 
 <script>
 var urlParams = new URLSearchParams(window.location.search);
